--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 height: auto;
                 padding-top: 61.81%; /* 비율 유지를 위해 (원본 비율에 맞춤) */
 
-                background-image: url(index.png);
+                background-image: url('index.png');
                 background-size: cover;
                 background-position: center;
 
